# batchscanner

./: .gitignore  .readthedocs.yaml  CHANGELOG.rst  LICENCE  MANIFEST.in  README.rst  licence.txt  pyproject.toml  todo.txt
docs/: batchscan.rst  changelog.rst  conf.py  credentials.rst  index.rst  parse_show_eh.rst  parse_show_tg.rst  parsers.rst  quick_start.rst  requirements.txt  sikcli.rst  sikcommander.rst  synopsis.rst  tech_docum.rst
src/batchscanner/: __init__.py  __main__.py  batchscan.py  config.toml  credentials.py  network.txt  script.txt  sikcli.py  sikcommander.py  sikcredentials.py  sikssh.py  sikssh_config.toml
src/batchscanner/parsers/: parse_show_eh.py  parse_show_tg.py
