[build-system]
requires      = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "bachscanner-siklu"
version = "0.1.0"
description = "Batch-query/configure multiple Siklu radios via their CLI (SSH) interface"
readme = "src/index.rst"
authors = [{ name = "Daniel Ephraty", email = "daniel@ephraty.com" }]
license = { file = "LICENCE" }
keywords = ["cli", "batch", "siklu", "siklu radios"]
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
]

dependencies = ["paramiko", "pyyaml", "tabulate"]
requires-python = ">=3.11"

    [project.optional-dependencies]
    build = ["build", "twine"]
    dev   = []

    [project.scripts]
    realpython = "batchscanner.__main__:main"

    [project.urls]
    repository    = "https://github.com/DanielEphraty/batchscanner"
    documentation = "https://batchscanner.readthedocs.io/en/latest/"


