[build-system]
requires      = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "batchscanner-siklu"
dynamic = ["version"]
description = "A script to batch-scan/query/configure multiple Siklu radios"
readme = "README.rst"
authors = [{ name = "Daniel Ephraty", email = "daniel@ephraty.com" }]
license = { file = "LICENCE" }
keywords = ["cli", "batch", "siklu", "siklu radios"]
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
]

dependencies = ["paramiko", "pyyaml", "tabulate"]
requires-python = ">=3.11"

    [project.optional-dependencies]
    build = ["build", "twine"]
    dev   = ["sphinx-rtd-theme"]

    [project.scripts]
    batchscanner = "batchscanner.__main__:main"

    [project.urls]
    repository    = "https://github.com/DanielEphraty/batchscanner"
    documentation = "https://batchscanner.readthedocs.io/en/latest/"

[tool.setuptools.dynamic]
version = {attr = "batchscanner.__version__"}
